syntax = "proto3";

package ru.otus.protobuf;

option java_multiple_files = true;
option java_package = "ru.otus.protobuf";
option java_outer_classname = "SequenceProto";

service SequenceService {
    rpc GenerateSequence (SequenceRequest) returns (stream SequenceResponse);
}

message SequenceRequest {
    int32 firstValue = 1;
    int32 lastValue = 2;
}

message SequenceResponse {
    int32 value = 1;
}

